[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Traps/v_platform.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Traps/MovingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44, 13.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 8.5 )

[node name="MovingPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0, -16 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -24.5 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
